# meta-llama-workshop-demo

./: .gitignore  README.md  deploy.py  env.production  fastapi_app.py  graph_build.py  langgraph.json  pyproject.toml  환경설정 가이드.md
data/: customer_data.csv
notebooks/: Customer_Support_Agent_Complete.ipynb
static/: index.html  script.js  style.css
